# blueprint

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  AZURE_DEPLOYMENT.md  Blueprint Workshop — Detailed Summary & Outcomes.txt  Blueprint_LOE.xlsx  CLAUDE.md  COST_CALCULATOR.csv  COST_CALCULATOR_GUIDE.md  COST_OF_OWNERSHIP.md  DEVELOPER_QUICKSTART.md  Datapage Platform Program — Project Charter.txt  LOCAL_DEVELOPMENT_PLAN.md  MATERIALIZE_TEMPLATE_GUIDE.md  PRODUCT_REQUIREMENTS_DOCUMENT.md  PRODUCT_ROADMAP.md  README.md  VALUE_STREAMS.md  VERCEL_DEPLOYMENT.md  deploy-to-azure.sh  docker-compose.yml  pyproject.toml  track3-analysis.json
.claude/: README.md  settings.json  settings.local.json
.claude/commands/: .gitkeep
.claude/hooks/: .gitkeep  pre-commit.sh
backend/: .env.example
demo-hybrid-state-workflow/: .dockerignore  .gitignore  CODE_HIGHLIGHTS.md  DEMO_GUIDE.md  DEMO_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_README.md  Dockerfile  QUICK_UPDATE.md  README.md  REBUILD_COMPLETE.md  SCENARIO_PLAYER_REPORT.md  TASK_BREAKDOWN.md  UI_IMPROVEMENTS_SUMMARY.md  debug-timeline.cjs  deploy-aws.ps1  deploy-aws.sh  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  test-timeline-logic.cjs
docs/: ARCHITECTURE_DIAGRAM.md  Connect2_Architecture.drawio
frontend/: .env.example
scripts/: analyze-track3-stories.py  analyze-weekly-time.py  assign-sprint2-tasks.py  assign-stories-to-me.ps1  assign-stories-to-me.py  assign-stories-to-sprints.py  check-recent-time.py  complete-review.py  complete-task.py  create-assessment-repo.sh  create-aws-blocker.py  create-jira-tasks.py  create-localstack-tasks.py  delete-time-entries.py  find-dp01-project.py  find-dp01-tasks.py  find-everhour-tasks.py  get-available-track3-tasks.py  get-my-time-entries.py  get-recent-sprint-work.py  get-sprint-tasks.py  get-task-details.py  get-track3-tasks.py  handoff-for-review.py  identify-missing-stories.py  init-db.sql  jira_automation.py  link-sprint2-dependencies.py  link-stories-to-epic.ps1  link-stories-to-epic.py  localstack-init.sh  move-tickets-to-in-progress.py  populate-dec1-week.py  populate-dec8-week.py  populate-time-entries.py  reset-onboarding.sh  run-check-time.ps1  run-find-dp01.ps1  run-find-tasks.ps1  run-time-analysis.ps1  (+9 more)
starter-kit/: .env.example  .gitignore  Caddyfile  LAYOUT_ARCHITECTURE.md  LAYOUT_COMPONENT_HIERARCHY.md  LAYOUT_WRAPPERS_SUMMARY.md  README.md  README_WINDMILL_INTEGRATION.md  WINDMILL_CAPABILITIES_ANALYSIS.md  WINDMILL_LICENSING.md  WINDMILL_TESTING_SUMMARY.md  WINDMILL_TEST_EXECUTION_NOTES.md  docker-compose.yml  package-lock.json  package.json  reset-windmill.bat  reset-windmill.sh  start-services.bat  start-services.sh  staticwebapp.config.json  test-integration.js
stubs/: README.md  WORKFLOW_POC_README.md
stubs/api/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  check_serializer.py  pyproject.toml
stubs/api/.github/: PULL_REQUEST_TEMPLATE.md
stubs/api/.github/workflows/: cd.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  terraform.yml
stubs/api/app/: __init__.py  config.py  dependencies.py  main.py  types.py
stubs/api/app/api/: health.py  router.py
stubs/api/app/api/v1/: workflow.py  workflow_definitions.py
stubs/api/app/cli/: __init__.py
stubs/api/app/db/: database.py
stubs/api/app/models/: workflow.py
stubs/api/app/providers/: __init__.py
stubs/api/app/schemas/: workflow.py
stubs/api/app/services/: workflow_service.py
stubs/api/bpmn/: vs4_poc.bpmn  wfg1_project_kickoff.bpmn  wfg2_schematic_design.bpmn  wfg3_construction_docs.bpmn
stubs/api/docs/runbooks/: DEPLOYMENT.md  ROLLBACK.md
stubs/api/docs/technical/: .gitkeep  API_QUICKSTART.md  API_SPECIFICATION.md  BACKEND_ARCHITECTURE.md  DATABASE_SCHEMA.md  FASTAPI_PROJECT_STANDARDS.md  GITHUB_ACTIONS.md  INFRASTRUCTURE.md  WORKFLOW_API.md  WORKFLOW_DATABASE_SCHEMA.md
stubs/api/infrastructure/docker/: .dockerignore  Dockerfile
stubs/api/infrastructure/terraform/: .gitkeep
stubs/api/infrastructure/terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
stubs/api/infrastructure/terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
stubs/api/infrastructure/terraform/environments/staging/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
stubs/api/infrastructure/terraform/modules/acm/: main.tf  outputs.tf
stubs/api/infrastructure/terraform/modules/alb/: main.tf  outputs.tf  variables.tf
stubs/api/infrastructure/terraform/modules/bastion/: main.tf  outputs.tf  variables.tf
stubs/api/infrastructure/terraform/modules/dns/: main.tf  outputs.tf  variables.tf
stubs/api/infrastructure/terraform/modules/dns-record/: main.tf  outputs.tf
stubs/api/infrastructure/terraform/modules/ecr/: main.tf
stubs/api/infrastructure/terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
stubs/api/infrastructure/terraform/modules/ecs-cluster/: main.tf  variables.tf
stubs/api/infrastructure/terraform/modules/ecs-service/: main.tf  outputs.tf  variables.tf
stubs/api/infrastructure/terraform/modules/elasticache/: main.tf  outputs.tf  variables.tf
stubs/api/infrastructure/terraform/modules/networking/: main.tf  variables.tf
stubs/api/infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
stubs/api/infrastructure/terraform/modules/route53-zone/: main.tf  variables.tf
stubs/api/infrastructure/terraform/modules/sns-alerts/: main.tf  outputs.tf  variables.tf
stubs/api/scripts/: fix_workflow_bpmn_data.sql  init_workflow_poc_db.sql  migrate_workflow_definitions_v2.sql  rollback.sh
stubs/api/tests/: __init__.py  conftest.py
stubs/api/tests/api/: test_health.py
test-documents/: Value_Streams_v3_5_SIMULATED.md
tests/: test_formatting.py  test_hooks_demo.py  test_sample.py
ui-mockups/: admin-console.html  agent-portal.html  builder-portal.html  index.html  internal-acquisitions.html  internal-dashboard.html  internal-entitlement.html  internal-servicing.html
(+565 files in other folders)
