# Python project configuration for Connect 2.0
# Tools: Ruff (linter/formatter), pytest, bandit, mypy

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connect2"
version = "0.1.0"
description = "Connect 2.0 - Unified loan origination and servicing platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    "pre-commit>=3.5.0",
]

# ============================================
# Ruff Configuration (Linter + Formatter)
# ============================================
[tool.ruff]
# Target Python 3.9+
target-version = "py39"

# Line length to match black
line-length = 100

# Include/exclude patterns
extend-exclude = [
    "localstack-data",
    ".venv",
    "venv",
    "node_modules",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint
    "TRY",   # tryceratops
    "RUF",   # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by formatter)
    "TRY003",  # Avoid specifying long messages outside exception class
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in test files
"tests/**/*.py" = [
    "ARG",     # Unused function arguments (fixtures)
    "PLR2004", # Magic values in tests are ok
]

# Scripts can have print statements
"scripts/**/*.py" = [
    "T20",     # Allow print statements
]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["connect2"]
force-sort-within-sections = true

[tool.ruff.format]
# Formatter configuration (like black)
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# ============================================
# Pytest Configuration
# ============================================
[tool.pytest.ini_options]
# Test discovery patterns
testpaths = ["tests", "scripts"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-v",                       # Verbose output
    "--tb=short",               # Shorter traceback format
    "--strict-markers",         # Strict marker checking
    "--strict-config",          # Strict config checking
    "--color=yes",              # Colored output
    "--code-highlight=yes",     # Syntax highlighting
    "--maxfail=3",              # Stop after 3 failures
]

# Markers for organizing tests
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "smoke: Smoke tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["scripts"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/localstack-data/*",
]

[tool.coverage.report]
# Fail if coverage is below 80%
fail_under = 80
show_missing = true
skip_covered = false
precision = 2

# Exclude lines from coverage
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================
# Bandit Configuration (Security)
# ============================================
[tool.bandit]
# Don't scan test files for security issues
exclude_dirs = [
    "tests",
    "localstack-data",
    ".venv",
    "venv",
]

# Skip specific checks
skips = [
    "B101",  # assert_used (ok in tests)
    "B601",  # paramiko_calls (if we use paramiko)
]

# ============================================
# Mypy Configuration (Type Checking)
# ============================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
show_error_context = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
